added statusCodes in controller and service
